--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
@@ -28,5 +31,4 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   }
-  
 }
